--- a/src/app/note-list/note-list.component.css
+++ b/src/app/note-list/note-list.component.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(244, 213, 213);
-  color: white;
+  color: rgb(56, 53, 53);
   width: 25rem;
   height: 38rem;
  
