--- a/src/app/note-detail/note-detail.component.css
+++ b/src/app/note-detail/note-detail.component.css
@@ -6,6 +6,24 @@
     width: 30rem;
     height: 35rem;
   }
+  .context-title {
+    text-align: left;
+    width:15rem;
+    margin: 10px;
+    width: 15rem; 
+
+  }
+
+  .context-input{  
+    text-align:start;
+    margin-top: 10px;
+    padding-top: 10px;
+    width:15rem;
+    margin: 10px;
+    width: 22rem;
+    height: 30rem;  
+    }
+
   
   h2 {
     margin-top: 0;
