note and subnote data works

--- a/src/app/add-note/add-note.component.css
+++ b/src/app/add-note/add-note.component.css
@@ -22,7 +22,7 @@ width:15rem;
 
 
 .add-button{
-  background-color: #2f73e2;
+  background-color: #40464f;
   color: #f5f2f7;
   border: none;
   font: inherit;
