--- a/src/app/add-note/add-note.component.html
+++ b/src/app/add-note/add-note.component.html
@@ -7,14 +7,14 @@
   <div>
     <input
       class="title-input"
-      placeholder="Enter a Title"
+      placeholder="Enter a Note Title"
       [formControl]="titleControl"
     />
 
     <button class="add-button" (click)="addNote()">+ New Note</button>
   </div>
 
-  @for (note of notes; track subNote?.id) {
+  @for (note of notes; track note?.id) {
     <button class="list-button" (click)="onTitleClick(note)">{{ note.title }}</button>
   }
 
