--- a/src/app/note-detail/note-detail.component.css
+++ b/src/app/note-detail/note-detail.component.css
@@ -1,11 +1,20 @@
 .details {
-    padding: 20px;
     border: 1px solid #ddd;
     margin-top: 10px;
     background-color: azure;
     width: 30rem;
     height: 35rem;
   }
+  .title-list{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(247, 237, 237);
+    color: rgb(56, 53, 53);
+    width: 25rem;
+    height: 38rem;
+   
+  }
+  
   .context-title {
     text-align: left;
     width:15rem;
@@ -25,6 +34,4 @@
     }
 
   
-  h2 {
-    margin-top: 0;
-  }
+ 
