add context updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
     (subNoteEmitter)="selectedSubnote($event)" 
     [note]="note"></app-note-list>
   <app-note-detail    
-    [subNote]="subNote"></app-note-detail>
+    [subNote]="subNote"
+    [note]="note"></app-note-detail>
 </div>
 
 
