--- a/src/app/note-detail/note-detail.component.html
+++ b/src/app/note-detail/note-detail.component.html
@@ -1,11 +1,8 @@
 <p>note-detail-comp</p>
 <div class="title-list" >
-  @if(subNote){
-    <input class="context-title" placeholder="Title" [value]="subNote.subtitle" >
+  @if(subNote()){
+    <input class="context-title" placeholder="Title" [value]="subNote().subtitle" >
     <button class="subnote-button" (click)="addContext()">+ Add New context </button>
-    <textarea class="context-input" [value]="subNote.context" [formControl]="contextControl"></textarea>
-   
-  }
-
-   
+    <textarea class="context-input" [value]="subNote().context" [formControl]="contextControl"></textarea>   
+  }  
   </div>
