notebook app updated version with delete funktion

--- a/src/app/add-note/add-note.component.css
+++ b/src/app/add-note/add-note.component.css
@@ -1,8 +1,6 @@
 
 .container{
-  display: flex;
-  flex-direction: column;
-  background-color: gray;
+  background-color: rgb(120, 120, 120);
   color: white;
   width: 30rem;
   height: 37rem;
@@ -29,20 +27,30 @@ width:15rem;
   min-width: 10rem;
   text-align: left;
 }
+.delete-button{
+  background-color: #924056;
+  color: #f5f2f7;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  width: 3%;
+  min-width: 4rem;
+  text-align: left;
+}
 
 add-button:hover {
   background-color: #a0acb9;
 }
 
 .list-button{
-display: flex;
+align-items: flex-start;
 background-color: rgba(229, 217, 211, 0.478);
 color: white;
 border: none;
 font: inherit;
 cursor: pointer;
 width: 5%;
-min-width: 28rem;
+min-width: 20rem;
 text-align: left;
 margin: 5px;
 }
